--- a/README.html
+++ b/README.html
@@ -167,20 +167,16 @@ Low-level Terminal information</li>
 Cursor Support</li>
 <li><input type="checkbox" disabled="" checked="" />
 Clear Terminal Support</li>
+<li><input type="checkbox" disabled="" checked="" />
+ANSI Raw Mode Support</li>
+<li><input type="checkbox" disabled="" checked="" />
+Keyboard Support &amp; async stdin</li>
+<li><input type="checkbox" disabled="" checked="" />
+Multiple Screens</li>
+<li><input type="checkbox" disabled="" checked="" />
+Polish up existing interface and add docs (0.0.1 release)</li>
 <li><input type="checkbox" disabled="" />
-ANSI Raw Mode Support and multiple screens</li>
-<li><input type="checkbox" disabled="" />
-Keyboard Support</li>
-<li><input type="checkbox" disabled="" />
-Event Handling</li>
-<li><input type="checkbox" disabled="" />
-Widget Support (Blocks, lists, tabs, tables, paragraphs, etc.)</li>
-<li><input type="checkbox" disabled="" />
-Positioning and Dynamic Resizing support</li>
-<li><input type="checkbox" disabled="" />
-Custom Widgets with Component Traits</li>
-<li><input type="checkbox" disabled="" />
-Font Sizes</li>
+Mouse Support</li>
 </ul>
 <h2 id="what-isnt-it">What isn’t it?</h2>
 <p>It’s goals are <strong>not</strong> as follows:</p>
